--- a/.github/workflows/testKT5.yml
+++ b/.github/workflows/testKT5.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - 'master'
     paths:
-      - ./Tasks/Task4/**
+      - ./PokemonGame/**
 
 jobs:
   build:
@@ -22,11 +22,11 @@ jobs:
         with:
           dotnet-version: ${{ matrix.dotnet-version }}
       - name: Install dependencies
-        working-directory: ./Tasks/Task4
+        working-directory: ./PokemonGame
         run: dotnet restore
       - name: Build
-        working-directory: ./Tasks/Task4
+        working-directory: ./PokemonGame
         run: dotnet build --configuration Release --no-restore
       - name: Test
-        working-directory: ./Tasks/Task4
+        working-directory: ./PokemonGame
         run: dotnet test --no-restore --verbosity normal
